fixed sidescrollbar issue when mail to long

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -101,6 +101,7 @@ body {
 
 .contact-email {
     color: #4589FF;
+    word-break: break-word;
 }
 
 /* Farben für die Initialen */
